--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "devDependencies": {},
   "bundleDependencies": [],
 
-  "private": true,
+  "private": true,"
+  scripts": {
+     "start": "node server.js"
+  },
   "main": "server.js"
 }
