--- a/package.json
+++ b/package.json
@@ -2,23 +2,6 @@
   "name": "OpenShift-Sample-App",
   "version": "1.0.0",
   "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
@@ -28,8 +11,8 @@
   "devDependencies": {},
   "bundleDependencies": [],
 
-  "private": true,"
-  scripts": {
+  "private": true,
+  "scripts": {
      "start": "node server.js"
   },
   "main": "server.js"
