--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "npm": ">= 1.0.0"
   },
 
-  "dependencies": {},
+  "dependencies": {
+    "express": "~3.4.4"
+  },
   "devDependencies": {},
   "bundleDependencies": [],
 
